# CG_Midterm

./: CMakeLists.txt  LANGUAGE_ANALYSIS.md  README.md  explain.txt  suggest.txt
assets/: terrain.frag  ui.vert
include/: Algorithms2D.h  Camera.h  Math3D.h  Shader.h  Terrain.h
include/glad/: glad.h
src/: glad.c  main.cpp
